# nile

./: .gitignore  .gitmodules  dune-project  nile-integration-test.opam  nile-unit-test.opam  nile.opam  package-lock.json
.github/workflows/: ci.yml
doc/: config.toml
doc/content/en/blog/: 2021-01-01-v0.1.0.md  _index.md
doc/content/en/docs/: _index.md
doc/content/en/docs/bibliography/: _index.md  articles.md  books.md  tools.md
doc/content/en/docs/developer/: _index.md  docs.md
doc/content/en/docs/getting_started/: _index.md
doc/content/en/docs/language_spec/: _index.md  primitives.md
doc/content/en/docs/project/: _index.md  goals.md  releases.md  roadmap.md
doc/content/en/docs/tutorial/: _index.md
doc/content/en/docs/user_guide/: _index.md
src/: anf.ml  anf.mli  ast.ml  ast.mli  check.ml  check.mli  cli.ml  cli.mli  clos.ml  clos.mli  codegen.mli  dune  index.mld  lexer.mli  lexer.mll  loc.ml  loc.mli  nile.ml  op.ml  op.mli  opt.ml  opt.mli  parser.mly  top.ml  top.mli  type.ml  type.mli
src/annot/: ast.ml  ast.mli  check.ml  check.mli  dune  op.ml  op.mli  patt.ml  patt.mli  pretty.ml  pretty.mli  type.ml  type.mli
src/cli/: cli.ml  cli.mli  dune
src/codegen/: clos.ml  clos.mli  codegen.ml  dune
src/common/: builtin.ml  builtin.mli  check.ml  check.mli  common.ml  dune  loc.ml  loc.mli  op.ml  op.mli  patt.ml  patt.mli  sym.ml  sym.mli  type.ml  type.mli
src/ir/: anf.ml  anf.mli  builtin.ml  builtin.mli  check.ml  check.mli  dune  ir.ml  normalize.ml  normalize.mli  patt.ml  patt.mli  pretty.ml  pretty.mli  type.ml  type.mli
src/ir/opt/: dune  opt.mli
src/syntax/: annot.ml  annot.mli  ast.ml  ast.mli  check.ml  check.mli  dune  lexer.mli  lexer.mll  loc.ml  loc.mli  normalize.ml  normalize.mli  op.ml  op.mli  parser.mly  patt.ml  patt.mli  pretty.ml  pretty.mli  syntax.ml  type.ml  type.mli  unannot.ml  unannot.mli
test/: astTest.ml  checkTest.ml  codegenTest.ml  dune  integration.ml  lexerTest.ml  locTest.ml  opTest.ml  parserTest.ml  runner.ml  typeTest.ml  unit.ml
test/integration/: dune  runner.ml
test/unit/: anfTest.ml  astTest.ml  astTest.mli  checkTest.ml  checkTest.mli  cliTest.ml  cliTest.mli  closTest.ml  closTest.mli  dune  lexerTest.ml  lexerTest.mli  locTest.ml  locTest.mli  opTest.ml  opTest.mli  optTest.ml  optTest.mli  parserTest.ml  runner.ml  topTest.ml  typeTest.ml  typeTest.mli
test/unit/cliTest/: cliTest.ml  dune
test/unit/codegenTest/: closTest.ml  closTest.mli  codegenTest.ml  dune  typeTest.ml  typeTest.mli
test/unit/commonTest/: builtinTest.ml  builtinTest.mli  checkTest.ml  commonTest.ml  dune  opTest.ml  opTest.mli  typeTest.ml  typeTest.mli  util.ml  util.mli
test/unit/irTest/: anfTest.ml  anfTest.mli  dune  irTest.ml  normalizeTest.ml  normalizeTest.mli  optTest.ml  optTest.mli  typeTest.ml  typeTest.mli
test/unit/syntaxTest/: annotTest.ml  annotTest.mli  astTest.ml  astTest.mli  checkTest.ml  dune  lexerTest.ml  locTest.ml  locTest.mli  normalizeTest.ml  opTest.ml  opTest.mli  parserTest.ml  parserTest.mli  prettyTest.ml  prettyTest.mli  syntaxTest.ml  typeTest.ml  typeTest.mli  unannotTest.ml
