opam-version: "2.0"
name: "nile-unit-test"
version: "0.1"
synopsis: "Unit tests for the Nile compiler"
description: """
Unit tests for the Nile compiler
"""
maintainer: "Jonathan Bryant <bryantjt@amazon.com>"
authors: "Jonathan Bryant <bryantjt@amazon.com>"
license: "MIT"
homepage: "http://w.amazon.com/Nile"
build: [
  ["dune" "subst"]
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune"
  "nile"
  "ounit2"
  "cmdliner"
  "llvm"
]
