opam-version: "2.0"
name: "nile"
version: "0.1"
synopsis: "An example compiler"
description: """
An example compiler
"""
maintainer: "Jonathan Bryant <bryantjt@amazon.com>"
authors: "Jonathan Bryant <bryantjt@amazon.com>"
license: "MIT"
homepage: "http://w.amazon.com/Nile"
build: [
  ["dune" "subst"]
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune"
  "menhir"
  "ounit2"
  "cmdliner"
  "llvm"
  "bisect_ppx"
]
