opam-version: "2.0"
name: "nile"
version: "0.1"
synopsis: "An example compiler"
description: """
An example compiler
"""
maintainer: "Jonathan Bryant <bryantjt@amazon.com>"
authors: "Jonathan Bryant <bryantjt@amazon.com>"
license: "MIT"
homepage: "https://watersofoblivion.github.com/nile"
doc: "https://watersofoblivion.github.com/nile/docs"
bug-reports: "https://github.com/watersofoblivion/nile/issues"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc"] {with-doc}
]
depends: [
  "dune"
  "menhir"
  "ounit2"
  "cmdliner"
  "llvm"
  "bisect_ppx"
]
