(test
 (name unit)
 (modules unit)
 (action
   (run %{test}
     -testdata-dir %{workspace_root}/../../test/unit
     -ci true
     -shards 8
     -chooser failfirst))
 (libraries
   ounit2
   nileUnit))

(test
 (name integration)
 (modules integration)
 (action
   (run %{test}
     -testdata-dir %{workspace_root}/../../test/integration
     -ci true
     -shards 8
     -chooser failfirst))
 (libraries
   ounit2
   nileIntegration))
